--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -909,16 +909,11 @@ lpc-directive {
   flex-flow: column; }
 
 #lpc-canvas {
+  /* This is the THREEjs element*/
   width: 100%;
   height: 100%;
   margin: auto;
   z-index: 10; }
-
-.lpcCanvasSize-big {
-  border: 1px solid lime; }
-
-.lpcCanvasSize-tutorial {
-  border: 1px solid red; }
 
 .lpc-container {
   /* This is the light blue box*/
