--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -889,11 +889,9 @@ lpc-directive {
   flex-flow: column; }
 
 #lpc-canvas {
-  margin: auto;
-  border: 1px solid red; }
+  margin: auto; }
 
 #lpc-canvas-parentSize {
-  border: 2px solid yellow;
   z-index: 10;
   width: 100%;
   height: 100%; }
