--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -3,6 +3,8 @@ lpc-directive {
 	-webkit-flex: 1;
 	margin: auto;
 	flex-flow: column;
+	width: 100%;
+	height: 100%;
 }
 
 // This is the THREEjs element.
