--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -694,6 +694,14 @@ canvas {
       border-radius: 10px;
       background-color: #c5f3ff;
       z-index: 5; }
+    .tutWave-content .leftBox .lpc-container-tutorial {
+      /* This is the light blue box*/
+      position: relative;
+      height: 150px;
+      width: 480px; }
+    .tutWave-content .leftBox .lpc-canvas-area {
+      width: 100%;
+      height: 100%; }
     .tutWave-content .leftBox .soundImgBox {
       position: relative;
       margin: 0;
@@ -886,7 +894,9 @@ lpc-directive {
   display: -webkit-flex;
   -webkit-flex: 1;
   margin: auto;
-  flex-flow: column; }
+  flex-flow: column;
+  width: 100%;
+  height: 100%; }
 
 #lpc-canvas {
   margin: auto; }
