lpc directive clean-up and documentation in preparation for tutorial p05s4

--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -26,13 +26,13 @@ lpc-directive {
 .lpcCanvasSize-big { // not working
 	// width: 780px;
 	// height: 380px; //#hc
-	border: 1px solid lime;
+	//border: 1px solid lime;
 }
 
 .lpcCanvasSize-tutorial {  // not working
 	// width: 480px;
 	// height: 150px; //#hc
-	border: 1px solid red;
+	//border: 1px solid red;
 }
 
 
