--- a/staRt/www/states/root/tutorial/_tutorial_styles.scss
+++ b/staRt/www/states/root/tutorial/_tutorial_styles.scss
@@ -76,7 +76,7 @@
 	@import 'partialStyles/noWave';
 
 
-	// STYLES THE WAVE CONTENT COMMON TO ALL LAYOUTS
+	// STYLES THE WAVE CONTENT COMMON TO ALL TUTORIAL LAYOUTS
 	// NOTES: 
 		// all styles for the live lpc wave are in _lpc-directive_styles.scss
 		// all directive styles overwrite individual state styles, see app_module.scss
@@ -137,7 +137,8 @@
 				//border: 1px solid lime;
 			}
 
-		.lpc-container-tutorial {  /* This is the light blue box*/
+		// This is used by the lpc directive template to size the waves parent ele
+		.lpc-container-tutorial {
 			position: relative;
 			height: 150px;
 			width: 480px;
@@ -151,6 +152,7 @@
 			// box-shadow: 1px 1px 1px rgba(0,0,0,0.15);
 		}
 
+			// this is used in the tutorial template files and should be the parent ele of the lpc directive
 			.lpc-canvas-area {
 				width: 100%;
 				height: 100%;
@@ -167,7 +169,7 @@
 				//border: 1px solid lime;
 			}
 
-			.waveFrame-label { // this is the light blue frame
+			.waveFrame-label {
 				position: relative;
 				margin: 10px;
 				top: -155px;
