--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -381,6 +381,13 @@ input[type=range]::-webkit-slider-thumb {
   font-family: 'Quicksand', 'Helvetica Neue', sans-serif !important;
   -webkit-user-select: none; }
 
+input, textarea {
+  -webkit-user-select: text;
+  -khtml-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text; }
+
 .animated {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
