--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -8,6 +8,14 @@
   -webkit-user-select: none;
 }
 
+input, textarea {
+  -webkit-user-select: text;
+  -khtml-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+}
+
 // KEYFRAME ANIMATION BASE  =================================================================
   // for some reason everything breaks when I move this out of _root_styles. Sorry!
 
