--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -21,6 +21,13 @@ lpc-directive {
 	z-index: 10;
 	width: 100%;
 	height: 100%;
+	display: flex;
+	align-items: center;
+}
+
+.waveLabel {
+	font-size: 35px;
+	width: 100%;
 }
 
 .lpcCanvasSize-big { // not working
