--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -942,7 +942,13 @@ lpc-directive {
 #lpc-canvas-parentSize {
   z-index: 10;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  display: flex;
+  align-items: center; }
+
+.waveLabel {
+  font-size: 35px;
+  width: 100%; }
 
 .lpc-container {
   /* This is the light blue box*/
