--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -417,7 +417,7 @@ input, textarea {
   position: relative;
   height: 65px;
   width: 80px;
-  margin: 0px;
+  margin: 20px;
   padding: 5px;
   font-size: 0.90em;
   font-family: 'Quicksand', 'Helvetica Neue', sans-serif;
@@ -426,8 +426,7 @@ input, textarea {
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
   z-index: 99;
   border: 0;
-  display: block;
-  margin-bottom: 20px; }
+  display: block; }
 
 #app-container {
   display: -webkit-flex;
@@ -910,6 +909,7 @@ div.needleBox {
   align-items: flex-end; }
 
 .range-label {
+  line-height: 100%;
   font-weight: bold;
   width: 40px;
   white-space: pre-line;
@@ -979,7 +979,9 @@ lpc-directive {
   right: 0; }
 
 .reset-button {
-  float: right; }
+  float: right;
+  margin-top: 0px;
+  margin-right: 0px; }
 
 .rate-box button {
   float: right;
