--- a/staRt/www/states/root/resources/_resources_styles.scss
+++ b/staRt/www/states/root/resources/_resources_styles.scss
@@ -1,5 +1,5 @@
 // parent ele for all the resources content
-.resources-contentBox {  
+.resources-contentBox {
 	//border: 1px solid violet;
 }
 
@@ -14,6 +14,7 @@
 
 .range-label
 {
+	line-height: 100%;
 	font-weight: bold;
 	width: 40px;
 	white-space: pre-line;
