Update text field highlight color in Profiles to yellow

--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -576,8 +576,8 @@ canvas {
 .profiles__info input {
   padding-left: 5pt; }
   .profiles__info input:focus {
-    border: 2px solid #c5f3ff;
-    border-radius: 4px; }
+    border-radius: 4px;
+    background: #FFECCB; }
 
 .tut-contentBox {
   position: relative;
