Fixes #148 --- I'm shrinking the LPC when we start practice/probing to make room for the rating buttons, which should get rid of the issue where missing the button resets the F3 target. This actually causes another issue though, which I can only fix by decreasing the pixel ratio of the renderer down to 1. If the overly-pixelated LPC becomes a huge issue I can try to fix it, but for now I'm not going to waste any more time and upload it as is

--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1004,6 +1004,8 @@ lpc-directive {
   height: 100%;
   display: flex;
   align-items: center; }
+  #lpc-canvas-parentSize.buttons_visible {
+    width: 88%; }
 
 .waveLabel {
   font-size: 35px;
