--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -23,6 +23,10 @@ lpc-directive {
 	height: 100%;
 	display: flex;
 	align-items: center;
+
+	&.buttons_visible {
+		width: 88%;
+	}
 }
 
 .waveLabel {
