--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -569,6 +569,12 @@ canvas {
   border-bottom-width: 2px;
   border-bottom-color: black; }
 
+.profiles__recordings ion-item.selected {
+  background-color: lightgray; }
+
+.profiles__recordings ion-item.activated {
+  background-color: white; }
+
 .item-radio.not_uploaded {
   border-left-style: solid;
   border-left-width: 5px;
