--- a/staRt/www/states/root/profiles/_profiles_styles.scss
+++ b/staRt/www/states/root/profiles/_profiles_styles.scss
@@ -10,6 +10,14 @@
 		border-bottom-color: black;
 	}
 
+	.profiles__recordings ion-item.selected {
+		background-color: lightgray;
+	}
+
+	.profiles__recordings ion-item.activated {
+		background-color: white;
+	}
+
 	// .item-radio.uploaded {
 	// 	border-left-style: solid;
 	// 	border-left-width: 5px;
