--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -20,7 +20,7 @@ lpc-directive {
 #lpc-canvas-parentSize {
 	z-index: 10;
 	width: 100%;
-	height: 100%;
+	height: 88%;
 	display: flex;
 	align-items: center;
 
@@ -51,7 +51,7 @@ lpc-directive {
 .lpc-container {  /* This is the light blue box*/
 	position: relative;
 	width: 800px;
-	height: 400px;
+	height: 460px;
 	margin: 0;
 	padding: 0;
 	border-radius: 4px;
@@ -65,6 +65,8 @@ lpc-directive {
 .slider-and-canvas {
 	display: inline-block;
 	width: 88%;
+	height: 88%;
+	margin-top: 4%;
 	position: absolute;
 	left: 0;
 
@@ -106,11 +108,7 @@ lpc-directive {
 	border: 0;
 	display: block;
 
-	&:active {
-		background-color: darken(#53C8E9, 10%);
-	}
-
-	&.selected
+	&.activated
 	{
 		background-color: #04c541;
 	}
