--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1011,7 +1011,7 @@ lpc-directive {
 #lpc-canvas-parentSize {
   z-index: 10;
   width: 100%;
-  height: 100%;
+  height: 88%;
   display: flex;
   align-items: center; }
   #lpc-canvas-parentSize.buttons_visible {
@@ -1025,7 +1025,7 @@ lpc-directive {
   /* This is the light blue box*/
   position: relative;
   width: 800px;
-  height: 400px;
+  height: 460px;
   margin: 0;
   padding: 0;
   border-radius: 4px;
@@ -1038,6 +1038,8 @@ lpc-directive {
 .slider-and-canvas {
   display: inline-block;
   width: 88%;
+  height: 88%;
+  margin-top: 4%;
   position: absolute;
   left: 0; }
   .slider-and-canvas.full-width {
@@ -1072,9 +1074,7 @@ lpc-directive {
   z-index: 99;
   border: 0;
   display: block; }
-  .rate-box button:active {
-    background-color: #26bae3; }
-  .rate-box button.selected {
+  .rate-box button.activated {
     background-color: #04c541; }
 
 .lpc-range {
