--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -993,6 +993,12 @@ div.needleBox {
   display: flex;
   flex: 1 0 auto; }
 
+.quest-contentBox {
+  display: flex;
+  height: 75%;
+  flex-direction: column;
+  justify-content: space-around; }
+
 .words-progress-indicator {
   display: inline-block;
   vertical-align: middle; }
@@ -1004,6 +1010,42 @@ div.needleBox {
   line-height: 1.5;
   display: inline-block;
   vertical-align: middle; }
+
+.quest-contentBox button[disabled] {
+  background-color: lightgray;
+  color: gray; }
+
+.quest-header {
+  width: 100%;
+  flex: 1 0 auto; }
+
+.quest-header h2 {
+  text-align: center;
+  width: 55%;
+  margin: auto; }
+
+.quest-header p {
+  text-align: center;
+  width: 55%;
+  margin: auto; }
+
+.quest-description-row {
+  width: 100%;
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: space-around; }
+
+.quest-description {
+  width: 30%; }
+
+.quest-button-class {
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: center; }
+
+.quest-buttons {
+  display: flex;
+  flex: 1 0 auto; }
 
 .range-container {
   display: flex;
