--- a/staRt/www/states/root/words/_words_styles.scss
+++ b/staRt/www/states/root/words/_words_styles.scss
@@ -60,6 +60,11 @@
 	justify-content: center;
 }
 
+.quest-button-class button[selected] {
+	background-color: green;
+	color: white;
+}
+
 .quest-buttons {
 	display: flex;
 	flex: 1 0 auto;
