--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1051,6 +1051,41 @@ div.needleBox {
   display: flex;
   flex: 1 0 auto; }
 
+.resources-links-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; }
+
+.resources-links-container .button {
+  width: 120px;
+  height: 100px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  line-height: 20px; }
+
+.resources-links-container .adjust-profile {
+  position: absolute;
+  right: 0px;
+  height: 60px; }
+
+.resources-links-container .questionnaire {
+  font-size: 13px; }
+
+.resources-links-container h3 {
+  width: 100%;
+  margin-bottom: 0px;
+  font-weight: bold;
+  color: #53c8e9; }
+
+.resources-links-container h4 {
+  width: 100%; }
+
+.resources-links-row {
+  display: flex;
+  width: 80%;
+  justify-content: center; }
+
 .range-container {
   display: flex;
   flex-flow: row nowrap;
