--- a/staRt/www/states/root/resources/_resources_styles.scss
+++ b/staRt/www/states/root/resources/_resources_styles.scss
@@ -3,6 +3,47 @@
 	//border: 1px solid violet;
 }
 
+.resources-links-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+
+.resources-links-container .button {
+	width: 120px;
+	height: 100px;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	line-height: 20px;
+}
+
+.resources-links-container .adjust-profile {
+	position: absolute;
+	right: 0px;
+	height: 60px;
+}
+
+.resources-links-container .questionnaire {
+	font-size: 13px;
+}
+
+.resources-links-container h3 {
+	width: 100%;
+	margin-bottom: 0px;
+	font-weight: bold;
+	color: $blue-main;
+}
+
+.resources-links-container h4 {
+	width: 100%;
+}
+
+.resources-links-row {
+	display: flex;
+	width: 80%;
+	justify-content: center;
+}
 
 .range-container
 {
