--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1067,6 +1067,14 @@ div.needleBox {
   display: flex;
   flex: 1 0 auto; }
 
+.back-button {
+  background: #d3d3d3;
+  color: #808080;
+  z-index: 100000;
+  position: absolute;
+  top: 0;
+  padding: 10px; }
+
 .resources-links-container {
   display: flex;
   flex-wrap: wrap;
