--- a/staRt/www/states/root/words/_words_styles.scss
+++ b/staRt/www/states/root/words/_words_styles.scss
@@ -89,3 +89,12 @@
 	display: flex;
 	flex: 1 0 auto;
 }
+
+.back-button {
+	background: #d3d3d3;
+    color: #808080;
+    z-index: 100000;
+    position: absolute;
+    top: 0;
+    padding: 10px;
+}
