Adding an indication as to who you're logged in as to the profiles screen

--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -564,6 +564,12 @@ canvas {
 canvas {
   background-color: #ffffff; }
 
+p.display-name {
+  margin-bottom: 0px;
+  padding: 10px;
+  display: table-cell;
+  vertical-align: middle; }
+
 .flex-align-right {
   display: flex;
   flex-direction: row-reverse; }
