--- a/staRt/www/states/root/profiles/_profiles_styles.scss
+++ b/staRt/www/states/root/profiles/_profiles_styles.scss
@@ -8,6 +8,13 @@
 
 }
 
+p.display-name {
+	margin-bottom: 0px;
+	padding: 10px;
+	display: table-cell;
+	vertical-align: middle;
+}
+
 .flex-align-right{
 	display: flex;
 	flex-direction: row-reverse;
