--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1009,6 +1009,9 @@ div.needleBox {
   display: flex;
   flex: 1 0 auto; }
 
+ion-view [view-title="Quest"] {
+  margin-top: 0; }
+
 .quest-contentBox {
   display: flex;
   height: 95%;
@@ -1036,7 +1039,7 @@ div.needleBox {
   font-size: 30px; }
 
 .words-word {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 700;
   text-transform: uppercase;
   line-height: 1.5;
