Added debug print info (add version, iOS version) to Resources. See #219

--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -1149,6 +1149,9 @@ div.needleBox {
 .resources p {
   margin: 0; }
 
+.version-display {
+  position: absolute; }
+
 lpc-directive {
   display: -webkit-flex;
   -webkit-flex: 1;
