--- a/staRt/www/states/root/_root_styles.scss
+++ b/staRt/www/states/root/_root_styles.scss
@@ -26,10 +26,10 @@ input, textarea {
     animation-fill-mode: both;
   }
 
-  /* 
-    These are here b/c I couldn't get the ng-show, ng-hide, & ng-if to trigger as soon as the class changed. They would stay in the DOM and display other eles and then get cleaned up after ~0.25s 
+  /*
+    These are here b/c I couldn't get the ng-show, ng-hide, & ng-if to trigger as soon as the class changed. They would stay in the DOM and display other eles and then get cleaned up after ~0.25s
   */
-  .animated.ng-enter, 
+  .animated.ng-enter,
   .animate-if.ng-leave {
     transition: 0s;
   }
@@ -45,140 +45,73 @@ input, textarea {
   }
 
   .big-button {
-  height: 65px;
-  background-color: #FFECCB;
-  color: #e79b4c;
-  border: 0px solid red;
-  position: relative;
-  height: 65px;
-  width: 80px;
-  margin: 20px;
-  padding: 5px;
-  font-size: 0.90em;
-  font-family: 'Quicksand', 'Helvetica Neue', sans-serif;
-  font-weight: 800;
-  text-align: center;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
-  z-index: 99;
-  border: 0;
-  display: block;
-}
+    height: 65px;
+    background-color: #FFECCB;
+    color: #e79b4c;
+    border: 0px solid red;
+    position: relative;
+    height: 65px;
+    width: 80px;
+    margin: 20px;
+    padding: 5px;
+    font-size: 0.90em;
+    font-family: 'Quicksand', 'Helvetica Neue', sans-serif;
+    font-weight: 800;
+    text-align: center;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+    z-index: 99;
+    border: 0;
+    display: block;
+  }
 
- // PAGE LAYOUT  =================================================================
- 
-  // IN INDEX.HTML ----------------------------------
-    #app-container { // this is the parent ele for the index.html view: <ion-nav-view>
+ // ROOT LAYOUT  =================================================================
+  //parent <ion-nav-view> in index.html
+    #app-container {
+      position: relative;
       display: -webkit-flex;
       -webkit-flex-direction: row;
       line-height: 1.7;
-      height: $appH + $statusBarH;
-      width: $appW;
+      height: 100vh;
+      width: 100vw;
       color: $grey-txtMain;
-      //border: 1px solid yellow; //#db
     }
 
-  // IN ROOT_TEMPLATE.HTML ----------------------------------
-
-    /* unfortunately, I think the correct way to update this is with native code:
-      https://developer.apple.com/reference/uikit/uiviewcontroller#//apple_ref/occ/instm/UIViewController/preferredStatusBarStyle  */
-    #statusBar-bg {
-      height: $statusBarH;
-      width: $appW;
-      background-color: $blue-main; //$blue-white; //$blue-main; //$grey-txtMain; //white; //$blue-dark;
-      border-bottom: 1px solid $blue-white;
-    }
-
-    #nav-and-content-container {  // this is the parent ele for the root_template view: <ion-view>
+  //parent <ion-view> in root_template
+    #nav-and-content-container {
+      position: relative;
       display: flex;
+      height: 100vh;
+      width: 100vw;
       flex-flow: row nowrap;
-      margin-top: $statusBarH;
-      //border: 1px solid red; //#db
     }
 
-    .bar-header { // styles <ion-header-bar> 
-      background-color: $blue-light;
-      //height-min: 106px; //iOS cordova will overwrite this 
-      height: $rowH !important; //iOS cordova will overwrite this if not !important
-      display: flex;
-      align-items: center; // vertical align, but doesn't work w/ iOS cordova
-      //justify-content: space-between;
-      box-shadow: $itemShadow;
-      padding-left: $navW;
-      //border: 1px solid red; //#db
-
-      .title { // // styles .title w/in <ion-header-bar> 
-        position: relative;
-        display: block;
-        text-transform: uppercase;
-        color: $blue-main;
-        font-weight: bold;
-        font-size: $header-type;
-        line-height: 0; // this adjusts for weird iOS stuff
-        padding-top: 10px; // also adjusts for weird iOS styling
-        text-align: left;
-        overflow: visible;
-      }
-    }
-
-    #content-container { // this styles the content view in root_template.html: </ion-nav-view>
+    // <ion-nav-view> in root_template
+    // this is the ROUTER CONTROLLER content container
+    // it is the immediate parent of each state_template <ion-view> (class="state-contentBox")
+    #content-container {
       display: -webkit-flex;
       -webkit-flex: 1;
       -webkit-flex-direction: column;
       justify-content: flex-start;
       text-align: center;
-      height: $appH - $rowH;
-      width: $appW; // - $navW - $col-pad; //#hc this will need to be padding
-      margin-top: $rowH;
-      //border: 1px solid red; //#db
-    }
-
-
-    //   display: -webkit-flex;
-    //   -webkit-flex: 1;
-    //   margin-top: $rowHalf;
-    //   margin-left: $navW; 
-    //   height: auto;
-    //   width: $appW - $navW - $col-pad;
-    //   font-size: 1rem;
-    //   //border: 1px solid $blue-light; //#db DEBUG LINES
-    // }
-
-    .state-contentBox--wide {  // used in tutorial for full width graphics
-      @extend .state-contentBox;
-      margin-left: 0;
-      padding: 0; 
-      width: $appW;
-    }
-
-
-    .pane {  
-      // not entirely sure what this does. seems to be an ion-thing that groups content. 
-      //currently, used in Resources & Profiles. It should probably be moved to the individual state .scss files #hc
-      flex-flow: column;
-      //border: 1px solid yellow;
-    }
-
-    canvas {
-      background-color: $white;
-      // box-shadow
-      // rounded corners
+      height: 100%;
+      width: 100%;
+      border: 1px solid red; //#db
     }
 
 
 // NAV CONTAINER -------------------------------------
-  // All of the nav icon animations live in  'common-styles/_keyframeAni.scss' 
+  // All of the nav icon animations live in  'common-styles/_keyframeAni.scss'
 
   #nav-container {
     display: -webkit-flex;
     -webkit-flex-direction: column;
     width: $nav-btnW; //10vw
-    height: $appH;
+    height: 100vh;
     z-index: 999;
   }
 
-  .nav-container {
-    z-index: 99;
-  }
+  .nav-container { z-index: 99; }
 
   .navTabs {
     height: $appH; //100vh;
@@ -232,34 +165,33 @@ input, textarea {
      This section contains global styles for the state-level ion-view. Any individual styles for each state should go in ion-view.state-contentBox's direct descendant and should be styled in the state's .scss file
   */
     .state-contentBox {
-      padding: 0; // reset 
+      padding: 0; // reset
       margin: 0; // reset
 
       display: -webkit-flex;
       -webkit-flex: 1;
       margin-top: $rowHalf;
-      margin-left: $navW; 
+      margin-left: $navW;
       height: auto;
       width: $appW - $navW - $col-pad;
       font-size: 1rem;
-      //border: 1px solid $blue-light; //#db DEBUG LINES
+      //border: 1px solid $blue-light;
     }
 
     .state-contentBox--wide {  // used in tutorial for full width graphics
       @extend .state-contentBox;
       margin-left: 0;
-      padding: 0; 
+      padding: 0;
       width: $appW;
     }
 
-    .pane {  
+    .pane {  // what is this #?
       flex-flow: column;
       background-color: transparent;
     }
 
     canvas {
-      background-color: $white;
+      background-color: transparent;
       // box-shadow #hc
       // rounded corners #hc
     }
-
